cmake_minimum_required(VERSION 3.29)
project(midterm)

set(CMAKE_CXX_STANDARD 20)

add_executable(question-1-vectors question-1-vectors.cpp)
add_executable(question-1-arrays question-1-arrays.cpp)
add_executable(question-2-vectors question-2-vectors.cpp)
add_executable(question-2-arrays question-2-arrays.cpp)
